manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tree
  labels:
    app: tree
spec:
  selector:
    matchLabels:
        app: tree
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: tree
    spec:
      containers:
        - name: tree-app
          image: latest-tree
          ports:
            - containerPort: 5000
              protocol: TCP
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
