manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tree
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
#  type: ClusterIP
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: tree
