manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "tree-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: tree-ingress
spec:
  rules:
    - http:
        paths:
          - path: /tree
            pathType: Prefix
            backend:
              service:
                name: tree
                port:
                  number: 80
